Quartz sync: Jan 21, 2025, 3:43 PM

--- a/content/Skola/01 - Pocitacove Site/Vrstvové modely/4. Transportní Vrstva/4. Transportní Vrstva.md
+++ b/content/Skola/01 - Pocitacove Site/Vrstvové modely/4. Transportní Vrstva/4. Transportní Vrstva.md
@@ -10,12 +10,13 @@ date: 2024-09-23T15:09
 - [[UDP]]
 - některé služby používají oba protokoly
 	- DNS, SSH, IMAP (synchronizace)
+- [[HTTP - hyper text transfer protocol]]
+
 
 ***
 ### [[Porty]]
 ### [[SSL a TLS]]
 ### [[Elektronická Pošta]]
 ### [[FTP]]
-### [[HTTP]]
 ### DHCP Server
 ![[DHCP ukázka.svg]]
