Quartz sync: Jan 23, 2025, 7:11 PM

--- a/content/Skola/01 - Pocitacove Site/Vrstvové modely/4. Transportní Vrstva/4. Transportní Vrstva.md
+++ b/content/Skola/01 - Pocitacove Site/Vrstvové modely/4. Transportní Vrstva/4. Transportní Vrstva.md
@@ -15,7 +15,7 @@ date: 2024-09-23T15:09
 
 ***
 ### [[Porty]]
-### [[SSL a TLS]]
+### [[TLS]]
 ### [[Elektronická Pošta]]
 ### [[FTP]]
 ### DHCP Server
